--- a/docs/components/accordion.html
+++ b/docs/components/accordion.html
@@ -38,7 +38,7 @@
 
           <ui-accordion-item expanded>
             <h3>
-              <ui-button>What is Lorem? (expanded)</ui-button>
+              <button>What is Lorem? (expanded)</button>
             </h3>
 
             <div>
@@ -48,7 +48,7 @@
 
           <ui-accordion-item>
             <h3>
-              <ui-button>What is Lorem?</ui-button>
+              <button>What is Lorem?</button>
             </h3>
 
             <div>
@@ -58,10 +58,10 @@
 
           <ui-accordion-item>
             <h3>
-              <ui-button>
+              <button>
                 <ui-icon name="light-mode"></ui-icon>
                 What is Lorem?
-              </ui-button>
+              </button>
             </h3>
 
             <div>
@@ -77,7 +77,7 @@
 &lt;ui-accordion&gt;
   &lt;ui-accordion-item expanded&gt;
     &lt;h3&gt;
-      &lt;ui-button&gt;What is Lorem?&lt;/ui-button&gt;
+      &lt;button&gt;What is Lorem?&lt;/button&gt;
     &lt;/h3&gt;
 
     &lt;div&gt;
@@ -87,7 +87,7 @@
 
   &lt;ui-accordion-item&gt;
     &lt;h3&gt;
-      &lt;ui-button&gt;What is Lorem?&lt;/ui-button&gt;
+      &lt;button&gt;What is Lorem?&lt;/button&gt;
     &lt;/h3&gt;
 
     &lt;div&gt;
@@ -97,10 +97,10 @@
 
   &lt;ui-accordion-item&gt;
     &lt;h3&gt;
-      &lt;ui-button&gt;
+      &lt;button&gt;
         &lt;ui-icon name="light-mode"&gt;&lt;/ui-icon&gt;
         What is Lorem?
-      &lt;/ui-button&gt;
+      &lt;/button&gt;
     &lt;/h3&gt;
 
     &lt;div&gt;
@@ -122,7 +122,7 @@
 
           <ui-accordion-item expanded>
             <h3>
-              <ui-button>What is Lorem? (expanded)</ui-button>
+              <button>What is Lorem? (expanded)</button>
             </h3>
 
             <div>
@@ -132,7 +132,7 @@
 
           <ui-accordion-item disabled>
             <h3>
-              <ui-button>What is Lorem? (disabled)</ui-button>
+              <button>What is Lorem? (disabled)</button>
             </h3>
 
             <div>
@@ -142,10 +142,10 @@
 
           <ui-accordion-item>
             <h3>
-              <ui-button>
+              <button>
                 <ui-icon name="light-mode"></ui-icon>
                 What is Lorem?
-              </ui-button>
+              </button>
             </h3>
 
             <div>
@@ -161,7 +161,7 @@
 &lt;ui-accordion single&gt;
   &lt;ui-accordion-item expanded&gt;
     &lt;h3&gt;
-      &lt;ui-button&gt;What is Lorem?&lt;/ui-button&gt;
+      &lt;button&gt;What is Lorem?&lt;/button&gt;
     &lt;/h3&gt;
 
     &lt;div&gt;
@@ -171,7 +171,7 @@
 
   &lt;ui-accordion-item disabled&gt;
     &lt;h3&gt;
-      &lt;ui-button&gt;What is Lorem? (disabled)&lt;/ui-button&gt;
+      &lt;button&gt;What is Lorem? (disabled)&lt;/button&gt;
     &lt;/h3&gt;
 
     &lt;div&gt;
@@ -181,10 +181,10 @@
 
   &lt;ui-accordion-item&gt;
     &lt;h3&gt;
-      &lt;ui-button&gt;
+      &lt;button&gt;
         &lt;ui-icon name="light-mode"&gt;&lt;/ui-icon&gt;
         What is Lorem?
-      &lt;/ui-button&gt;
+      &lt;/button&gt;
     &lt;/h3&gt;
 
     &lt;div&gt;
