--- a/docs/components/alert.html
+++ b/docs/components/alert.html
@@ -7,7 +7,6 @@
   <h2>Dependencies</h2>
   <ul>
     <li><a href="#icon">ui-icon</a></li>
-    <li><a href="#button">ui-button</a></li>
   </ul>
 </div>
 
@@ -15,12 +14,12 @@
   <h2>Info</h2>
   <p>The structure must be strictly followed.</p>
   <p>A heading or text is required to display a meaningful message.</p>
-  <p>The heading can be any HTML heading element from h2 to h6; h3 is recommended.</p>
+  <p>The heading can be any element from h2 to h6; h3 is recommended.</p>
 </div>
 
 <div>
   <h2>Attributes</h2>
-  <p>non-closable - static (optional, boolean). Hides the close button when the attribute is present.</p>
+  <p>non-closable - static (optional). Hides the close button.</p>
 </div>
 
 <section class="content">
@@ -36,7 +35,7 @@
       <div class="example-code">
 
 <pre><code>
-&lt;ui-alert non-closable&gt;
+&lt;ui-alert&gt;
   &lt;div&gt;Your settings have been successfully saved.&lt;/div&gt;
 &lt;/ui-alert&gt;
 </code></pre>
