--- a/docs/components/checkbox.html
+++ b/docs/components/checkbox.html
@@ -80,31 +80,31 @@
     <div>Size: small | medium (default) | large</div>
     <div class="example">
       <div class="example-preview">
-        <ui-checkbox checked size="small"></ui-checkbox>
-        <ui-checkbox checked size="medium"></ui-checkbox>
-        <ui-checkbox checked size="large"></ui-checkbox>
+        <ui-checkbox checked data-size="small"></ui-checkbox>
+        <ui-checkbox checked data-size="medium"></ui-checkbox>
+        <ui-checkbox checked data-size="large"></ui-checkbox>
       </div>
       <div class="example-code">
 <pre><code>
-&lt;ui-checkbox size="small"&gt;&lt;/ui-checkbox&gt;
-&lt;ui-checkbox size="medium"&gt;&lt;/ui-checkbox&gt;
-&lt;ui-checkbox size="large"&gt;&lt;/ui-checkbox&gt;
+&lt;ui-checkbox data-size="small"&gt;&lt;/ui-checkbox&gt;
+&lt;ui-checkbox data-size="medium"&gt;&lt;/ui-checkbox&gt;
+&lt;ui-checkbox data-size="large"&gt;&lt;/ui-checkbox&gt;
 </code></pre>
       </div>
     </div>
   </div>
 
   <div class="content-item">
-    <div>Radius: full, none</div>
+    <div>Rounded: full, none</div>
     <div class="example">
       <div class="example-preview">
-        <ui-checkbox checked radius="full"></ui-checkbox>
-        <ui-checkbox checked radius="none"></ui-checkbox>
+        <ui-checkbox checked data-rounded="full"></ui-checkbox>
+        <ui-checkbox checked data-rounded="none"></ui-checkbox>
       </div>
       <div class="example-code">
 <pre><code>
-&lt;ui-checkbox radius="full"&gt;&lt;/ui-checkbox&gt;
-&lt;ui-checkbox radius="none"&gt;&lt;/ui-checkbox&gt;
+&lt;ui-checkbox data-rounded="full"&gt;&lt;/ui-checkbox&gt;
+&lt;ui-checkbox data-rounded="none"&gt;&lt;/ui-checkbox&gt;
 </code></pre>
       </div>
     </div>
