--- a/docs/components/icon.html
+++ b/docs/components/icon.html
@@ -19,7 +19,7 @@
     <div class="example">
       <div class="example-preview">
         <ui-icon name="home" id="example-icon"></ui-icon>
-        <ui-button onclick="changeIconName()">Reactivity</ui-button>
+        <button onclick="changeIconName()">Reactivity</button>
       </div>
       <div class="example-code">
 
