--- a/docs/components/tabs.html
+++ b/docs/components/tabs.html
@@ -13,7 +13,7 @@
   <h2>Attributes</h2>
   <p><strong>Tabs:</strong></p>
   <p>vertical - static (optional). Sets the orientation of the tabs in the tablist to vertical.</p>
-  <span><strong>Tab:</strong></span>
+  <p><strong>Tab:</strong></p>
   <p>disabled - static (optional). Controls whether the tab is disabled.</p>
 </div>
 
